docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/listitem.mdx
---
title: ListItem
description: A Jetpack Compose ListItem component for displaying structured list entries.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI ListItem matches the official Jetpack Compose [`ListItem`](<https://developer.android.com/reference/kotlin/androidx/compose/material3/package-summary#ListItem(kotlin.Function0,androidx.compose.ui.Modifier,kotlin.Function0,kotlin.Function0,kotlin.Function0,kotlin.Function0,androidx.compose.material3.ListItemColors,androidx.compose.ui.unit.Dp,androidx.compose.ui.unit.Dp)>) API for structured list entries with headline, supporting, overline, leading, and trailing content slots.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/listitem/android-light.webp"
  darkSrc="/static/images/expo-ui/listitem/android-dark.webp"
  alt="Two Material 3 list items showing overline, headline, and supporting text"
/>

## Installation

<APIInstallSection />

## Usage

### Basic list item

<ComponentExample
  title="BasicListItem.tsx"
  src="/static/images/expo-ui/examples/listitem-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/listitem-basic-android-dark.webp"
  alt="A single list row with the headline Settings">

```tsx
import { Host, ListItem, Text } from '@expo/ui/jetpack-compose';

export default function BasicListItem() {
  return (
    <Host matchContents>
      <ListItem>
        <ListItem.HeadlineContent>
          <Text>Settings</Text>
        </ListItem.HeadlineContent>
      </ListItem>
    </Host>
  );
}
```

</ComponentExample>

### With compound components

Use compound components for rich content in each position.

<ComponentExample
  title="ListItemWithCompoundComponent.tsx"
  src="/static/images/expo-ui/examples/listitem-slots-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/listitem-slots-android-dark.webp"
  alt="A list row with a bell icon, an ACCOUNT overline, a Notifications headline, supporting text, and a trailing chevron">

```tsx
import {
  Host,
  ListItem,
  Icon,
  Text,
} from '@expo/ui/jetpack-compose';

export default function ListItemWithSlots() {
  return (
    <Host matchContents>
      <ListItem>
        <ListItem.HeadlineContent>
          <Text>Notifications</Text>
        </ListItem.HeadlineContent>
        <ListItem.OverlineContent>
          <Text>ACCOUNT</Text>
        </ListItem.OverlineContent>
        <ListItem.SupportingContent>
          <Text>Manage notification preferences</Text>
        </ListItem.SupportingContent>
        <ListItem.LeadingContent>
          <Icon source={require('./assets/notifications.xml')} />
        </ListItem.LeadingContent>
        <ListItem.TrailingContent>
          <Icon source={require('./assets/chevron.xml')} />
        </ListItem.TrailingContent>
      </ListItem>
    </Host>
  );
}
```

</ComponentExample>

### Clickable list item

Use the `clickable` modifier to handle tap interactions.

<ComponentExample
  title="ClickableListItem.tsx"
  src="/static/images/expo-ui/examples/listitem-clickable-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/listitem-clickable-android-dark.webp"
  alt="A tappable list row with the headline Tap me">

```tsx
import { Host, ListItem, Text } from '@expo/ui/jetpack-compose';
import { clickable } from '@expo/ui/jetpack-compose/modifiers';

export default function ClickableListItem() {
  return (
    <Host matchContents>
      <ListItem
        modifiers={[clickable(() => console.log('Tapped!'))]}>
        <ListItem.HeadlineContent>
          <Text>Tap me</Text>
        </ListItem.HeadlineContent>
      </ListItem>
    </Host>
  );
}
```

</ComponentExample>

### Custom headline content

Use `ListItem.HeadlineContent` for composable headline content like rows with icons.

<ComponentExample
  title="ListItemCustomHeadline.tsx"
  src="/static/images/expo-ui/examples/listitem-custom-headline-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/listitem-custom-headline-android-dark.webp"
  alt="A list row whose headline pairs the text Premium Feature with a star icon">

```tsx
import {
  Host,
  ListItem,
  Text,
  Row,
  Icon,
} from '@expo/ui/jetpack-compose';

export default function ListItemCustomHeadline() {
  return (
    <Host matchContents>
      <ListItem>
        <ListItem.HeadlineContent>
          <Row
            horizontalArrangement={{ spacedBy: 8 }}
            verticalAlignment="center">
            <Text>Premium Feature</Text>
            <Icon source={require('./assets/star.xml')} size={16} />
          </Row>
        </ListItem.HeadlineContent>
      </ListItem>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { ListItem } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/listitem"
  apiName="ListItem"
/>
